--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ gpflow==2.9.0
 scikit-learn==1.3.2
 empyrical==0.5.5
 keras-tuner==1.4.6
+jupyterlab==4.0.9
+quantstats==0.0.62
+tensorflow-metal==1.1.0
